2005-12-13  Tom Tromey  <tromey@redhat.com>

	* java/lang/instrument/ClassDefinition.java: Reformatted.
	* java/lang/instrument/UnmodifiableClassException.java: Reformatted.
	* java/lang/instrument/IllegalClassFormatException.java: Reformatted.

2005-12-13  Tom Tromey  <tromey@redhat.com>

	* java/lang/instrument/ClassDefinition.java (ClassDefinition): Now
	public.

2005-12-09  Tom Tromey  <tromey@redhat.com>

	* javax/print/attribute/standard/Chromaticity.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/ColorSupported.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/Compression.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/Copies.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/CopiesSupported.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/DateTimeAtCompleted.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/DateTimeAtCreation.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/DateTimeAtProcessing.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/Destination.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/DocumentName.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/Fidelity.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/Finishings.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/JobHoldUntil.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/JobImpressions.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/JobImpressionsCompleted.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/JobImpressionsSupported.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/JobKOctets.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/JobKOctetsProcessed.java
	(getCategory): Genericized.
	* javax/print/attribute/standard/JobKOctetsSupported.java