@@ -1,3 +1,13 @@
+2005-12-14  Nicolas Geoffray  <nicolas.geoffray@menlina.com>
+
+	* java/lang/ClassLoader
+	(defineClass(String,byte[],int,int,ProtectionDomain)):
+	Calls VMClassLoader.defineClassWithTransformers instead
+	of VMClassLoader.defineClass.
+	* vm/reference/java/lang/VMClassLoader
+	(defineClassWithTransformers): New method.
+	(instrumenter): New Field. 
+
 2005-12-13  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/instrument/ClassDefinition.java: Reformatted.
